parlassets/scss/_party_list.scss
.party-list {
  margin: 0 0 4px 0;
  padding: 0;
  list-style: none;
  .loader {
    padding: 10px 0;
    text-align: center;
    .nalagalnik { height: 300px; }
  }
  .party {
    @extend %flex;
    line-height: 40px;
    padding: 5px 0;
    .column {
      font-family: Roboto, sans-serif;
      font-size: 18px;
      font-weight: 300;
      margin: 0;
      text-align: left;
      &.name {
        flex: none;
        width: 136px;
      }
    }
    @include respond-to(mobile) {
      padding: 4px 0;
      .column {
        font-size: 14px;
        &.name { width: 60px; }
      }
    }
  }
}

